<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/quiz21"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="add"
        android:backgroundTint="@color/blue"

        android:text="@string/distributed_systems"
        android:textColor="#000000"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="30dp"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="add"
        android:backgroundTint="@color/blue"

        android:text="@string/data_science_using_r"
        android:textColor="#000000"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="add"
        android:backgroundTint="@color/blue"

        android:text="@string/information_security"
        android:textColor="#000000"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"/>


</LinearLayout>